Basically ready portfolio

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,17 +1,95 @@
 ---
+import Project from '../components/Project.astro';
+import Skills from '../components/Skills.astro';
+import Layout from '../layouts/Layout.astro';
+
+const projects = [
+    {
+        title: "C++ Game Engine",
+        description: "A custom C++ 2D game engine made in 1.5 years. Features: a custom ECS system for entities, 3 different physics engines, 3D audio, a custom GUI system and a powerful rendering pipeline.",
+        tstack: ["C++", "OpenGL", "SDL3", "GLSL", "CMake", "libGlaze"],
+        videos: [
+            { id: "KDJ3x_4dz6k", caption: "Testing a dynamic destruction system." },
+            { id: "OevI8bIBUGI", caption: "Demo of GUI system, showing most of the features." },
+            { id: "kJXMfNDsmWI", caption: "Simple test game to find lacking parts in the engine." }
+        ]
+    },
+    {
+        title: "Application from a website (Qt)",
+        description: "An application made using Qt6 and C++. Scrapes data from Wilma using libCurl, managing 3 sessions. ",
+        tstack: ["C++", "Qt6", "libCurl", "CMake"],
+        images: [
+        { src: "images/rwilmamain.png", caption: "Main page" },
+
+        ]
+    }
+];
 
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<link rel="icon" href="/favicon.ico" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+
+<Layout title="Elmo Määttänen Portfolio">
+    <header class="hero">
+        <h1>Elmo Määttänen</h1>
+        <p class="subtitle">
+            Upper Secondary Student <span class="highlight">Kerttulin lukio</span> (ICT Track).<br>
+            Loves to deal with High-Performance Systems, Game Engines, and Linux Environments.
+        </p>
+        <div class="cta">
+            <a href="mailto:your.email@example.com" class="button">Contact Me</a>
+            <a href="/cv.pdf" target="_blank" class="button">Download CV</a>
+        </div>
+    </header>
+
+    <section class="about-brief">
+        <h3>About me</h3>
+        <p>
+            While my projects focus on game development, my real passion lies in 
+            systems programming. 
+            Writing a custom engine from scratch has had me solving hard problems regarding 
+            memory management, spatial algorithms, and hardware performance skills 
+            directly transferable to industrial automation and embedded software.
+        </p>
+    </section>
+    <section id="skills">
+        <h2>Tech</h2>
+        <Skills />
+    </section>
+
+    <section id="projects">
+        <h2>Selected Projects</h2>
+            {projects.map(project => (
+                <Project {...project} />
+            ))}
+        </section>
+</Layout>
+
+<style>
+    .hero { margin: 4rem 0 5rem 0; }
+    .subtitle { 
+        font-size: 1.2rem; 
+        color: var(--text-muted); 
+        max-width: 600px; 
+    }
+    .highlight { color: var(--text-main); font-weight: 600; }
+    
+    .cta { display: flex; gap: 1rem; margin-top: 1.5rem; }
+    
+    .button {
+        padding: 0.7rem 1.5rem;
+        border-radius: 4px;
+        font-weight: 600;
+        transition: all 0.2s;
+    }
+
+    .primary {
+        background: var(--accent);
+        color: #fff;
+        border: 1px solid var(--accent);
+    }
+    .primary:hover { background: var(--accent-hover); }
+
+    .about-brief { margin-bottom: 4rem; max-width: 650px; }
+    .about-brief p { font-size: 1.1rem; color: var(--text-muted); }
+
+</style>
