Update contact link to use mailto

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,7 +36,7 @@ const projects = [
             Loves to deal with High-Performance Systems, Game Engines, and Linux Environments.
         </p>
         <div class="cta">
-            <a href="elmomaattanen@proton.me" class="button">Contact Me</a>
+            <a href="mailto:elmomaattanen@proton.me" class="button">Contact Me</a>
             <a href="/cv.pdf" target="_blank" class="button">Download CV</a>
         </div>
     </header>
